--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 node_modules
 
-public/js/bundle.js
-public/css/app.css
-
 *.log
+
+public/js/bundle.js
+public/js/bundle.js.map
+public/css
+
+build
+
+src/ts/typings
