--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "author": "tgfjt",
   "license": "MIT",
   "scripts": {
-    "buildjs": "watchify src/js/app.js -o public/js/bundle.js",
-    "buildcss": "node-sass src/styles/ -w -o public/css",
-    "watch": "npm run buildjs & npm run buildcss",
-    "start": "npm run watch & node server.js & open http://localhost:8080"
+    "gulp": "gulp",
+    "postinstall": "dtsm install"
   },
   "devDependencies": {
     "browserify": "^12.0.1",
     "ecstatic": "^1.4.0",
-    "node-sass": "^3.4.2",
+    "gulp": "^3.9.0",
+    "gulp-if": "^2.0.0",
+    "gulp-sass": "^2.1.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "^1.0.2",
+    "gulp-typescript": "^2.10.0",
+    "gulp-uglify": "^1.5.1",
+    "lodash.assign": "^3.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.6.1"
   },
   "dependencies": {
-    "domready": "^1.0.8",
-    "raf": "^3.1.0"
+    "domready": "^1.0.8"
   }
 }
